--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 sudo: false
 language: python
 python:
-  - 2.6
   - 2.7
   - 3.3
   - 3.4
   - 3.5
   - 3.6
 script:
+  - python setup.py install
   - python tests.py
 notifications:
   email: false
