--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
 [tox]
-envlist = py27,py35,py36,py37,py38
+envlist = py27,py35,py36,py37,py38,py39,pypy,pypy3
 [testenv]
 commands = python tests.py
