--- a/setup.cfg
+++ b/setup.cfg
@@ -28,5 +28,8 @@ install_requires =
     littleutils
     requests
 
-setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
+setup_requires = setuptools; setuptools_scm[toml]
 include_package_data = True
+
+[bdist_wheel]
+universal=1
