--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 
 script:
   - python setup.py install
-  - pip install coveralls
+  - pip install coveralls requests==2.25.1
   - coverage run --source=outdated tests.py
   - coverage report -m
 
